# pickplace_arm

./: .gitignore  README.md  gz_ros2_control_harmonic.patch
src/arm_description/: CMakeLists.txt  package.xml
src/pickplace_arm_bringup/: package.xml  setup.cfg  setup.py
src/pickplace_arm_bringup/config/: amcl.yaml  amcl_ionic.yaml  fastdds_udp_only.xml  mission.rviz  nav2_params.yaml  slam_toolbox.yaml  twist_mux.yaml
src/pickplace_arm_bringup/launch/: autonomous_pick.launch.py  localization.launch.py  mapping.launch.py  mission.launch.py  mission_2.launch.py  mission_2_ionic.launch.py  nav2.launch.py  pick_and_place.launch.py  search_and_pick.launch.py  slam.launch.py  test_scan.launch.py
src/pickplace_arm_bringup/maps/: ionic.pgm  ionic.yaml  warehouse.pgm  warehouse.yaml
src/pickplace_arm_bringup/pickplace_arm_bringup/: mission.py  mission_2.py  nav_and_pick.py  pick_and_place.py  search_and_pick.py  teleop_key.py
src/pickplace_arm_description/: CMakeLists.txt  package.xml
src/pickplace_arm_description/config/: arm_controllers.yaml  ekf.yaml
src/pickplace_arm_description/launch/: display.launch.py  gazebo.launch.py
src/pickplace_arm_description/models/apriltag_column_1/: model.sdf
src/pickplace_arm_description/models/apriltag_column_2/: model.sdf
src/pickplace_arm_description/models/apriltag_column_3/: model.sdf
src/pickplace_arm_description/models/box_blue/: model.sdf
src/pickplace_arm_description/models/box_green/: model.sdf
src/pickplace_arm_description/models/box_red/: model.sdf
src/pickplace_arm_description/models/obstacle_box/: model.sdf
src/pickplace_arm_description/models/table/: model.sdf
src/pickplace_arm_description/models/target_box/: model.sdf
src/pickplace_arm_description/models/wall/: model.sdf
src/pickplace_arm_description/rviz/: display.rviz
src/pickplace_arm_description/urdf/: pickplace_arm.gazebo.xacro  pickplace_arm.urdf.xacro
src/pickplace_arm_description/worlds/: ionic.sdf  pickplace.sdf  warehouse.sdf
src/pickplace_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/pickplace_arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  pickplace_arm.ros2_control.xacro  pickplace_arm.srdf  pickplace_arm.urdf.xacro  ros2_controllers.yaml
src/pickplace_arm_moveit_config/launch/: demo.launch.py  gazebo_moveit.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
