<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pickplace_arm_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="maedehjeddi1993@gmail.com">maedeh</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>pymoveit2</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>pickplace_arm_description</exec_depend>
  <exec_depend>pickplace_arm_moveit_config</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
